# ScriptX_Test

./: .gitignore  README.md
Lua/ScriptXTest/: CMakeLists.txt  main.cpp
Lua/ScriptXTest/ScriptX/: CMakeLists.txt
